working with han

--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -940,6 +940,15 @@
 	}
 }
 
+.person {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+}
+
+.person:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
 .ul-social-circle {
 	list-style: none;
 	padding: 0;
