Fixed mobile grids (fixed from 3 tiles to 1 tile per row)

--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ h1, h2, h3, h4, h5,
 
 /* Blocks */
 .site-blocks-cover {
-  background-size: 100%;
+  background-size: full;
   background-repeat: no-repeat;
   background-position: top;
   background-position: center center;}
@@ -1375,8 +1375,9 @@ h1, h2, h3, h4, h5,
 
 .how-it-work-item p {
   color: white; }
-
-.person h3 {
+.person{
+  text-align: center;
+Co.person h3 {
   font-size: 18px; }
 
 .ul-social-circle {
