--- a/css/style.css
+++ b/css/style.css
@@ -1377,7 +1377,9 @@ h1, h2, h3, h4, h5,
   color: white; }
 .person{
   text-align: center;
-Co.person h3 {
+  margin-bottom: 60px;
+}
+.person h3 {
   font-size: 18px; }
 
 .ul-social-circle {
