--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ h1, h2, h3, h4, h5,
 
 /* Blocks */
 .site-blocks-cover {
-  background-size: full;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
   background-position: center center;}
