Geen horizontale scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 /* Base */
+html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   line-height: 1.7;
   color: #4d4d4d;
   font-weight: 300;
-  font-size: 1rem; }
+  font-size: 1rem; 
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 ::-moz-selection {
   background: #000;
